[gd_scene load_steps=4 format=3 uid="uid://buef8res5uw0j"]

[ext_resource type="Script" path="res://Scenes/start_menu.gd" id="1_62y10"]
[ext_resource type="Texture2D" uid="uid://di6xp1uljt7kb" path="res://Sprites/Petal.png" id="2_21emi"]
[ext_resource type="Texture2D" uid="uid://bx5u07intacux" path="res://Sprites/backgroundsimple.png" id="2_pl1la"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_62y10")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Sprite2D" parent="Control"]
position = Vector2(-905, -494)
scale = Vector2(4, 4)
texture = ExtResource("2_pl1la")
offset = Vector2(600, 325)

[node name="RichTextLabel" type="Label" parent="Control"]
texture_filter = 5
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -490.0
offset_top = -107.0
offset_right = -240.0
offset_bottom = -7.0
grow_horizontal = 2
scale = Vector2(4, 4)
text = "PROJECT EYEDROP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -50.5
offset_right = 34.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="TutorialButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Tutorial"

[node name="ExitButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="CPUParticles2D" type="CPUParticles2D" parent="Control"]
position = Vector2(575, -359)
amount = 400
lifetime = 8.0
preprocess = 10.0
speed_scale = 0.5
randomness = 0.74
lifetime_randomness = 0.17
texture = ExtResource("2_21emi")
emission_shape = 3
emission_rect_extents = Vector2(1080, 50)
spread = 67.14
gravity = Vector2(0, 98)
radial_accel_max = 25.0
angle_min = 1.0
angle_max = 360.0
scale_amount_min = 0.3
scale_amount_max = 0.5

[connection signal="pressed" from="Control/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
